syntax="proto3";
package com.busgo.ping.proto;

service PingService {

   // ping request
   rpc ping(PingRequest)returns(PingResponse);
}

// ping
message  PingRequest {
  string  ping =1;
}

// pong
message  PingResponse {
  string  pong =1;
}